--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ services:
   - docker
 
 before_install:
-  - docker build -t AhmedKhaledRe/docker-react -f Dockerfile.dev .
+  - docker build -t ahmed/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run AhmedKhaledRe/docker-react npm run test -- --coverage
+  - docker run ahmed/docker-react npm run test -- --coverage
 
 deploy:
   provider: elasticbeanstalk
