--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,19 @@ services:
   - docker
 
 before_install:
-  - docker build -t ahmed/docker-react -f Dockerfile.dev .
+  - docker build -t ahmedkhaledre/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run ahmed/docker-react npm run test -- --coverage
+  - docker run ahmedkhaledre/docker-react npm run test -- --coverage
 
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: "docker-react"
+  env: "DockerReact-env"
+  bucket_name: "elasticbeanstalk-us-east-1-677505090583"
+  bucket_path: "docker-react"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: "$AWS_SECRET_KEY"
