--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "frontend",
+  "homepage" : "http://AhmedKhaledRe.github.io/FirstReactDocker",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
