--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_deploy:
 
 deploy:
   provider: script
-  script: netlify deploy -s loving-murdock-1be57f -t $FIRST_REACT_DOCKER -p ./build
+  script: netlify deploy -s loving-murdock-1be57f --auth $FIRST_REACT_DOCKER -p --dir ./build
   skip_cleanup: true
   on:
     branch: master
