--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script:
 
 before_deploy:
   - npm install netlify-cli -g
-  - npm install
+  - npm install react-scripts
   - npm run build
 
 deploy:
