--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ script:
 before_deploy:
   - npm install netlify-cli -g
   - npm install react-scripts
+  - npm install react
+  - npm install react-scripts
+  - npm install react-dom
   - npm run build
 
 deploy:
