--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_deploy:
 
 deploy:
   provider: script
-  script: netlify deploy -s loving-murdock-1be57f --auth $FIRST_REACT_DOCKER -p --dir ./build
+  script: netlify deploy -s loving-murdock-1be57f --auth $FIRST_REACT_DOCKER --dir ./build
   skip_cleanup: true
   on:
     branch: master
