--- a/.travis.yml
+++ b/.travis.yml
@@ -9,18 +9,8 @@ script:
   - docker run ahmedkhaledre/docker-react npm run test -- --coverage
 
 
-before_deploy:
-  - npm install netlify-cli -g
-  - npm install react-scripts
-  - npm install react
-  - npm install react-scripts
-  - npm install react-dom
-  - npm run build
-
-deploy:
-  provider: script
-  script: netlify deploy -s loving-murdock-1be57f --auth $FIRST_REACT_DOCKER --dir ./build
-  skip_cleanup: true
-  on:
-    branch: master
-  dir: "_build/"
+  deploy:
+    provider: netlify
+    site: loving-murdock-1be57f
+    auth: FIRST_REACT_DOCKER
+    edge: true # opt in to dpl v2
